--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ var app = new Vue({
 
 </script>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9385521014408092" crossorigin="anonymous"></script>
 
 
 
